tests/builds/pass/helloWorld.cpl
void hello()
{
	string c = "Hello World\n";
	printf(c);
}


int main(int argc)
{
    hello();
	return 0;
} 

